@@ -31,6 +31,8 @@ documents those changes that are of interest to users and admins.
     user's pending allocation was started with srun and then for some reason
     the slurmctld was brought down and while it was down the srun was removed.
  -- Fixed InactiveLimit math to work correctly
+ -- BGQ - Add logic to make it so blocks can't use a midplane with a nodeboard
+    in error for passthrough.
 
 * Changes in SLURM 2.4.3
 ========================
